# buildQ_Freecad

./: .env  .gitignore  CMakeLists.txt  Doxyfile  MANIFEST.in  README.md  buildQ_module.py  pixi.toml  pyproject.toml  setup.py
docs/: HISTORICAL_README.md
freecad/buildQ/: commands.py  init_gui.py
freecad/buildQ/resources/translations/: README.md  buildQ_es-ES.ts
freecad/buildQ_module/: draw_helpers.py  draw_wall.py  grid_settings.py  grid_tool.py  init_gui.py  wall_assembly.py
freecad/buildQ_module/resources/translations/: buildQ_module_es-ES.ts  update_translation.sh
html/: graph_legend.html  index.html  navtreedata.js
latex/: refman.tex
test_macros/: freecad.py  freecad_bullnose.py  freecad_v2.py
todo/: 20250105_.md  20250118.md  20250118_todo.md
