# References: 
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# https://packaging.python.org/en/latest/guides/packaging-namespace-packages/#native-namespace-packages
# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad.buildQ_module"
dynamic = ["version"]
description = "This workbench is for creating building elements for construction"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
    {name = "Paul Jarvis", email = "paul@prgoressivbuilding.com.au"},
]
requires-python = ">=3.8"
dependencies = ["'numpy',"]

[project.urls]
source = "https://foobar.com/me/coolWB"

[tool.setuptools]
packages = ["freecad", "freecad.buildQ_module"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "freecad.buildQ_module.version.__version__"}